@@ -10,8 +10,8 @@ AUX adchpp.init.d 466 RMD160 a5fb587e8016c1b6730ee139b41bb297ccce5013 SHA1 ec502
 AUX adchpp_runner.sh 185 RMD160 72c35fba3ea4425c7ebda2baee69c2d649220721 SHA1 15426ba4ae2f12d4ad3c912f4925157ff3a31966 SHA256 3fc062bea86aa313c20315a293c0164bf52fe272c0e46d0e2753cc29b5ca89cb
 DIST adchpp_2.8.0_source.tar.gz 8446076 RMD160 058b73713c6f593a9dca30393272bd43be9de461 SHA1 277d84017d3d911d1449d3245db5bf0fcb7ed63e SHA256 7819f18f4fbd5a17f1e06ca9aa66f6c1a31d59cab7b0e600940283aa0e6307c2
 DIST adchpp_2.8.1_source.tar.gz 8551219 RMD160 c269283efcd2853f12d31db6f52c0c7b5165676a SHA1 2892c41e9c0922f61f9ae424b2ea48e6565bb8b6 SHA256 666e68056d6e4fc1f59ed2822eed914af293fa708fb943a046b40b4ba294a4f3
-EBUILD adchpp-2.8.0.ebuild 3861 RMD160 ede6c652ef181515d53d85caf014fde2c26cee8a SHA1 7dcf1256f443e69724f433160b76ff09b3ad90f5 SHA256 31e93cc12ce3622f1103cd1c36302cd982ea25c324dc5b6515216d68174b7626
-EBUILD adchpp-2.8.1.ebuild 3680 RMD160 c83cc369d8af6e4a66ad8c3688bba13aea3b1a8f SHA1 1d3bc3ed2b8434d3ee60e6a84719984cfafd3fb0 SHA256 cf43f464dfbf49cf62343ccb754e60c433931ff16b9a422f5c87134ec7ba7fc5
+EBUILD adchpp-2.8.0.ebuild 4099 RMD160 ba84a93d3caac2400d2d1f0d8f7267fac9158471 SHA1 1b45bf06e2843eba5f49413260c2025a21ab2b44 SHA256 c1115000de26fb362a30d5b7de5fa72fb58e09eb0d8898e2e2856f1f704fe917
+EBUILD adchpp-2.8.1.ebuild 3918 RMD160 8264b49878c539a114313f24be7540b5c2e28ad7 SHA1 11432b50f1d418de9ccbe19fcfa1fd15bebde540 SHA256 6435d1de573a2e8cf07fadbd3e9ef60d97e68d1af1f940dc558a33188c9ae7a2
 MISC ChangeLog 711 RMD160 e580a524ac0562f2ae7308697a4fe1b2510a8a8d SHA1 99b628e1e3e0d8c1d57ab12b635c449637752f85 SHA256 dedcafd868702bcb3bc2517e5fdeabb89ff6f7688026f60e9621a89bc2c60506
 MISC TODO 112 RMD160 ddf91c86b1dbc3e00393e25046fcb6c734cee754 SHA1 bc896d708667823c5b86d12c5e65fab769a521ea SHA256 4d3a6f431d988c8ac37e6bbdb8fc946ddc591cce2029a83a339e0b16e4954d4c
 MISC metadata.xml 407 RMD160 025a9c56902d342189f308d98ed986fb5fba2ac1 SHA1 d4faaafc9dc058d10e7fb3c3ae75c6d526b2f39f SHA256 f5001e99b6181be8bac1b3ba8dbbce6ff2d63084ea64816cbb16d53a6871738b
