@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Aug 2012; Francisco Blas Izquierdo Riera (klondike) adchpp-2.8.0.ebuild,
+  adchpp-2.8.1.ebuild:
+  Fixed issues with FL_DataBase and the log dir
+
 *adchpp-2.8.1 (14 Aug 2012)
 *adchpp-2.8.0 (14 Aug 2012)
 
